<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.blazingdb</groupId>
		<artifactId>blazingdb-calcite-parent</artifactId>
		<version>1.0.0.RC</version>
	</parent>

	<artifactId>blazingdb-calcite-application</artifactId>
	<packaging>jar</packaging>

	<properties>
		<java.version>1.8</java.version>

		<!-- Maven properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<dependencies>

		<dependency>
         <groupId>com.blazingdb</groupId>
         <artifactId>blazingdb-protocol</artifactId>
         <version>1.0-SNAPSHOT</version>
        </dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.5</version>
		</dependency>
		<!-- BlazingDB -->
		<dependency>
			<groupId>com.blazingdb</groupId>
			<artifactId>blazingdb-calcite-core</artifactId>
			<version>1.0.0.RC</version>
		</dependency>
		<!-- Unix Sockets for BlazingConnection https://mvnrepository.com/artifact/com.github.jnr/jnr-unixsocket -->
		<dependency>
			<groupId>com.github.jnr</groupId>
			<artifactId>jnr-unixsocket</artifactId>
			<version>0.19</version>
		</dependency>
		<!-- Apache Commons Net -->
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.3</version>
		</dependency>
		<!-- Database Backends -->
		<dependency>
			    <groupId>com.h2database</groupId>
    <artifactId>h2</artifactId>
    <version>1.4.197</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>3.6.8.Final</version>
			<exclusions>
				<exclusion>
					<groupId>cglib</groupId>
					<artifactId>cglib</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-c3p0</artifactId>
			<version>3.6.3.Final</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>3.6.2</version>

    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
	</dependencies>

	<build>
		<plugins>
		<plugin>
		   <groupId>org.liquibase</groupId>
		   <artifactId>liquibase-maven-plugin</artifactId>
		   <version>3.6.2</version>
		   <configuration>
			  <propertyFile>src/main/resources/properties/liquibase.properties</propertyFile>
			     <propertyFileWillOverride>true</propertyFileWillOverride>

		        <changeLogFile>src/main/resources/liquibase-bz-master.xml</changeLogFile>
		        <driver>org.h2.Driver</driver>
		        <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
		   </configuration>
		   <executions>
			 <execution>
			   <phase>process-resources</phase>
			   <goals>
				 <goal>update</goal>
			   </goals>
			 </execution>
		   </executions>
		   <dependencies>
		   <dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.197</version>
			<scope>runtime</scope>
		</dependency></dependencies>
		</plugin>
 <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
        <destDir>../docs</destDir>
        </configuration>

      </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<finalName>BlazingCalcite</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.blazingdb.calcite.application.UnixServer</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
